--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,14 @@
-title: My Awesome Site
-description: "This is a description of my website."
-url: "https://skarthiky.github.io/"  # Add your site URL here
-baseurl: ""  # Leave it empty unless you're using a subpath for your site
+# _config.yml
+title: My Jekyll Site
+description: "A simple site using the Cayman theme."
+url: "https://skarthiky.github.io"  # Replace with your GitHub Pages URL
 
-# Optional: Enable theme-specific settings
-theme: jekyll-theme-basically-basic
+# Remote theme setup for Cayman
+remote_theme: "pages-themes/cayman@v0.1.0"  # This is the latest version of the Cayman theme
+theme: "cayman"  # Ensure this is set to "cayman"
+
+# Site-specific configurations
+baseurl: ""  # Leave empty unless you're using a subfolder
+permalink: /:year/:month/:day/:title/  # This is for blog post URL structure
+
+# Optional: you can add other fields like social media links, navigation, etc.
