--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,8 @@ url: "https://skarthiky.github.io"  # Replace with your GitHub Pages URL
 
 remote_theme: "pages-themes/cayman@v0.1.0"  # Use pages-themes/cayman instead of just cayman
 
+header:
+  image: "/assets/images/profile-pic.jpg"  # Path to your header image
 
 # Site-specific configurations
 baseurl: ""  # Leave empty unless you're using a subfolder
