--- a/_config.yml
+++ b/_config.yml
@@ -16,4 +16,4 @@ permalink: /:year/:month/:day/:title/  # This is for blog post URL structure
 
 extra:
   head:
-    - "<link rel='stylesheet' href='/assets/css/style.css'>"
+    - "<link rel='stylesheet' href='/assets/style/style.css'>"
