--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # _config.yml
-title: s. Karthik Yadavalli
+title: S Karthik Yadavalli
 description: "Personal Website"
 url: "https://skarthiky.github.io"  # Replace with your GitHub Pages URL
 
