--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,10 @@ remote_theme: "pages-themes/cayman@v0.1.0"  # Use pages-themes/cayman instead of
 baseurl: ""  # Leave empty unless you're using a subfolder
 permalink: /:year/:month/:day/:title/  # This is for blog post URL structure
 
+header:
+  image: "/assets/images/profile-pic.jpg"  # Ensure this matches your image path
+
+
 # Optional: you can add other fields like social media links, navigation, etc.
 
 # _config.yml
