--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: "Personal Website"
 url: "https://skarthiky.github.io"  # Replace with your GitHub Pages URL
 logo: /assets/images/profile-pic.jpg
 
-remote_theme: "pages-themes/cayman@v0.1.0"  # Use pages-themes/cayman instead of just cayman
+# remote_theme: "pages-themes/cayman@v0.1.0"  # Use pages-themes/cayman instead of just cayman
 
 # Site-specific configurations
 baseurl: ""  # Leave empty unless you're using a subfolder
