--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: S Karthik Yadavalli
 description: "Personal Website"
 url: "https://skarthiky.github.io"  # Replace with your GitHub Pages URL
 
-remote_theme: "jekyll/minima"  # Switch to Minima theme
+theme: "jekyll/minima"  # Switch to Minima theme
 
 # Site-specific configurations
 baseurl: ""  # Leave empty unless you're using a subfolder
